--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "nodejs",
+  "name": "discord-wash-bot",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A Discord bot that assigns gang members to wash money at specific times.",
+  "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node bot.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/node": "^22.13.11"
-  }
+    "discord.js": "^14.11.0",
+    "express": "^4.18.2",
+    "node-schedule": "^2.1.1"
+  },
+  "engines": {
+    "node": ">=16.9.0"
+  },
+  "author": "Hamzah",
+  "license": "MIT"
 }
