--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "discord.js": "^14.11.0",
     "express": "^4.18.2",
-    "node-schedule": "^2.1.1"
+    "node-schedule": "^2.1.1",
+    "dotenv": "^10.0.0"
   },
   "engines": {
     "node": ">=16.9.0"
